src/objects/QuoteRatePlan__c/QuoteRatePlan__c.object-meta.xml
<CustomObject>
    <label>Quote Rate Plan</label>
    <nameField>
        <displayFormat>QRP-{00000}</displayFormat>
        <label>Quote Rate Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Rate Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>