src/objects/QuoteRatePlan__c/fields/LeadTime__c.field-meta.xml
<CustomField>
    <fullName>LeadTime__c</fullName>
    <label>Lead Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>