src/objects/QuoteRatePlan__c/fields/QuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>Quote_Item__c</referenceTo>
    <relationshipLabel>Quote Rate Plans</relationshipLabel>
    <relationshipName>Quote_Rate_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>