src/objects/QuoteRatePlan__c/fields/Transfer_Price__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Price__c</fullName>
    <label>Transfer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>